--- a/part1/index.html
+++ b/part1/index.html
@@ -1,74 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <title>Quote generator homework</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Cozy Quote Generator</title>
   <style>
+    /* Reset & base */
+    * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
-      font-family: sans-serif;
-      padding: 2em;
-      background-color: #f0f0f0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #f2ece2, #ff9a9e);
+      animation: gradient 30s ease infinite;
+      color: #333;
       display: flex;
-      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       min-height: 100vh;
+      width: 100%;
+      padding: 2rem;
+      flex-wrap: wrap;
     }
-
-    #quoteBox {
+    .container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-width: 100%;
+      width: 100%;
+      height: 100%;
+    }
+    /* Container card */
+    .card {
       background: #fff;
-      padding: 1em;
-      border-radius: 8px;
-      margin-bottom: 1em;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-
-    button {
-      padding: 0.5em 1em;
-      font-size: 1rem;
-    }
-
-    footer {
-      margin-top: auto;
+      max-width: 400px;
+      max-height: 300px;
+      width: 100%;
+      min-height: 95%;
+      border-radius: 16px;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.1);
+      padding: 2rem;
       text-align: center;
-      font-size: 0.9rem;
+      position: relative;
+      overflow: hidden;
+    }
+    .card::before {
+      content: "";
+      position: absolute;
+      top: -50%;
+      left: -50%;
+      width: 200%;
+      height: 200%;
+      background: radial-gradient(circle at center, rgba(255,206,186,0.3), transparent 70%);
+      animation: rotateBg 20s linear infinite;
+    }
+    @keyframes rotateBg {
+      from { transform: rotate(0deg); }
+      to   { transform: rotate(360deg); }
+    }
+    /* Quote text */
+    #quote {
+      font-size: 1.25rem;
+      line-height: 1.6;
+      margin-bottom: 1.5rem;
+      position: relative;
+      z-index: 1;
+    }
+    #author {
+      font-size: 1rem;
+      font-style: italic;
       color: #555;
-      padding-top: 2em;
+      margin-bottom: 2rem;
+      position: relative;
+      z-index: 1;
+    }
+    /* Button */
+    #newQuoteBtn {
+      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+      border: none;
+      border-radius: 999px;
+      padding: 0.75rem 2rem;
+      font-size: 1rem;
+      cursor: pointer;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.1);
+      transition: transform 0.2s, box-shadow 0.2s;
+      position: relative;
+      z-index: 1;
+    }
+    #newQuoteBtn:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 24px rgba(0,0,0,0.15);
+    }
+    /* Footer */
+    footer {
+      border-top: 1px solid black;
+      min-width: 100%;
+      width: 100%;
+      text-align: center;
+      font-size: 0.85rem;
+      color: #666;
+
     }
   </style>
 </head>
-
 <body>
-
-  <h1>Quote generator homework</h1>
-  <h2>Create by Gift sensei </h2> <!-- Change XXXX to your name and student ID-->
-
-  <div id="quoteBox">
-    <p id="quote">Click the button to get a quote!</p>
+<div class="container">
+  <div class="card">
+    <p id="quote">Loading inspirational quote...</p>
     <p id="author"></p>
+    <button id="newQuoteBtn">New Quote</button>
   </div>
-
-  <button id="newQuoteBtn">New Quote</button>
-
+</div>
   <footer>
-    Web Design and Programming — Shibaura Institute of Technology — Spring 2025
+    Web Design & Programming — Spring 2025
   </footer>
 
   <script>
-    const quoteText = document.getElementById("quote");
-    const authorText = document.getElementById("author");
-    const newQuoteBtn = document.getElementById("newQuoteBtn");
+    const quoteEl = document.getElementById('quote');
+    const authorEl = document.getElementById('author');
+    const btn = document.getElementById('newQuoteBtn');
 
-    function getQuote() {
-     
-      //INPUT YOUR CODE HERE
-      //HINT: Use fetch() to get quote from "quotes.json"
-
-
+    async function getQuote() {
+      try {
+        btn.disabled = true;
+        quoteEl.textContent = 'Fetching quote…';
+        authorEl.textContent = '';
+        const res = await fetch('quotes.json');
+        if (!res.ok) throw new Error('Network response was not ok');
+        const quotes = await res.json();
+        const { q, a } = quotes[Math.floor(Math.random() * quotes.length)];
+        quoteEl.textContent = `"${q}"`;
+        authorEl.textContent = `— ${a}`;
+      } catch (err) {
+        quoteEl.textContent = 'Oops! Could not load a quote.';
+        authorEl.textContent = '';
+        console.error(err);
+      } finally {
+        btn.disabled = false;
+      }
     }
-    newQuoteBtn.addEventListener("click", getQuote);
-    getQuote(); // Load a quote on page load
+
+    btn.addEventListener('click', getQuote);
+    window.addEventListener('load', getQuote);
   </script>
 
 </body>
-
 </html>
