--- a/index.html
+++ b/index.html
@@ -16,7 +16,44 @@
   </style>
 </head>
 <body>
-  <h1>GitHub Pages is Working!</h1>
-  <p>If you can see this page, your GitHub Pages setup is correct.</p>
+  
+  <h1>Web Design and Programming Assignment 5</h1>
+  <div>
+    <button onclick="location.href='/part1'" >Famous Quotes</button>
+    <button onclick="location.href='/part2'" >Quiz</button>
+  </div>
+  <style>
+    /* Reset & base */
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #f2ece2, #ff9a9e);
+      animation: gradient 30s ease infinite;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      padding: 2rem;
+      color: #333;
+      width: 100%;
+      min-width: 100%;
+      flex-wrap: wrap;
+      padding: 10rem;
+    }
+    h1 {
+      min-width: 100%;
+      color: black;
+    }
+    button {
+      background-color: white;
+      color: black;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 16px;
+      padding: 10px 20px;
+      margin: 5rem;
+    }
+    </style>
 </body>
 </html>
